# aoc-2023

./: .aocbench.yaml  Cargo.toml  default.nix  run.sh
.docker/: Dockerfile  entrypoint.sh
answers/: 01  02  04  05  09  10  11
src/commons/: geom.rs  grid.rs  io.rs  math.rs  mod.rs  test_helpers.rs
