[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.50"
itertools = "0.12.0"
lazy_static = "1.4.0"
petgraph = "0.6.4"
bitvec = "1.0.1"
cached = "0.46.1"
regex = "1"
peg = "0.8.2"
